--- a/app/src/main/res/layout/activity_plot.xml
+++ b/app/src/main/res/layout/activity_plot.xml
@@ -35,13 +35,19 @@
             android:orientation="vertical">
 
             <com.jjoe64.graphview.GraphView
-                android:id="@+id/graph_temp"
+                android:id="@+id/graph_temp_hum"
                 android:layout_width="match_parent"
                 android:layout_height="300dp"
                 android:layout_marginTop="11dp" />
 
             <com.jjoe64.graphview.GraphView
-                android:id="@+id/graph_press_wind_hum"
+                android:id="@+id/graph_press_cloud"
+                android:layout_width="match_parent"
+                android:layout_height="300dp"
+                android:layout_marginTop="11dp" />
+
+            <com.jjoe64.graphview.GraphView
+                android:id="@+id/graph_wind"
                 android:layout_width="match_parent"
                 android:layout_height="300dp"
                 android:layout_marginTop="11dp" />
